--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="contact">
             <h2>Contact</h2>
             <p>Email: john.doe@example.com</p>
-            <p>Phone: +123 456 7890</p>
+            <p>Phone: +91 8077672728</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></p>
         </section>
     </main>
