--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Contact</h2>
             <p>Email: john.doe@example.com</p>
             <p>Phone: +91 8077672728</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/dhruvsinghal27/" target="_blank">linkedin.com/in/johndoe</a></p>
         </section>
     </main>
     <footer class="footer">
