--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
         <section class="contact">
             <h2>Contact</h2>
-            <p>Email: john.doe@example.com</p>
+            <p>Email: dhruvsinghal2711@gmail.com</p>
             <p>Phone: +91 8077672728</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/dhruvsinghal27/" target="_blank">linkedin.com/in/johndoe</a></p>
         </section>
