--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Dhruv Singhal</h1>
+        <h1>Dhruv Singhall</h1>
         <p>Senior DevOps Engineer-2</p>
     </header>
     <main class="container">
