--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <h1>Dhruv Singhal</h1>
-        <p>Senior DevOps Engineer-2</p>
+        <p>Senior DevOps Engineer-III</p>
     </header>
     <main class="container">
         <section class="about">
