--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <h2>Contact</h2>
             <p>Email: dhruvsinghal2711@gmail.com</p>
             <p>Phone: +91 8077672728</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/dhruvsinghal27/" target="_blank">linkedin.com/in/johndoe</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/dhruvsinghal27/" target="_blank">https://www.linkedin.com/in/dhruvsinghal27/</a></p>
         </section>
     </main>
     <footer class="footer">
-        <p>© 2024 John Doe. All rights reserved.</p>
+        <p>© 2024 All rights reserved.</p>
     </footer>
 </body>
 </html>
