--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
     </main>
     <footer class="footer">
-        <p>© 2024 All rights reserved.</p>
+        <p>© 2024 All Rights Reserved.</p>
     </footer>
 </body>
 </html>
